--- a/assets/css/CVCSS.css
+++ b/assets/css/CVCSS.css
@@ -1,3 +1,37 @@
 body {
     background-color: rgb(146, 181, 231);
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+nav {
+    background-color: white;
+    display:flex;
+    padding: 10px 20px; 
+}
+
+.nav-list {
+    list-style: none;
+    display:flex;
+    justify-content:center;
+    margin:0;
+    padding:0;
+}
+
+.nav-list a {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    transition: color 0.3s;
+}
+
+.nav-list a:hover {
+    color: rgb(146, 181, 231);
+}
+
+h1 {
+    background-color: white;
+    display:flex;
+    justify-content:center;
 }
