--- a/assets/css/CVCSS.css
+++ b/assets/css/CVCSS.css
@@ -1,22 +1,35 @@
-body {
-    background-color: rgb(146, 181, 231);
-    font-family: Arial, sans-serif;
+* {
     margin: 0;
     padding: 0;
 }
 
+body {
+    background: linear-gradient(to left, rgb(146, 181, 231) 1200px, white 100px);
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    grid-template-rows: repeat(8, 1fr);
+    gap:20px;   
+    height: 100vh; 
+}
+
 nav {
     background-color: white;
-    display:flex;
-    padding: 10px 20px; 
+    grid-column:1/4;
+    grid-row:1;
+    height:30px;
+    padding: 10px;
 }
 
 .nav-list {
     list-style: none;
     display:flex;
-    justify-content:center;
-    margin:0;
-    padding:0;
+    justify-content: space-around;
+    align-items: center;
+    
 }
 
 .nav-list a {
@@ -30,8 +43,52 @@ nav {
     color: rgb(146, 181, 231);
 }
 
-h1 {
+#Presentation {
+    grid-column: 2; 
+    grid-row: 2;
+}
+
+#Presentation>h1 {
     background-color: white;
-    display:flex;
-    justify-content:center;
+}
+
+#Formation {
+    grid-column: 2;
+    grid-row:3;
+}
+
+#Formation>h1 {
+    background-color: white;
+}
+
+#Competences {
+    grid-column: 2;
+    grid-row: 4;
+}
+
+#Competences>h1 {
+    background-color: white;
+}
+
+#Experiences {
+    grid-column: 2;
+    grid-row: 5;
+}
+
+#Experiences>h1 {
+    background-color: white ;
+}
+
+#Realisation {
+    grid-column:2;
+    grid-row:6;
+}
+
+#Realisation>h1 {
+    background-color:white;
+}
+
+#cote {
+    grid-column: 1;
+    grid-row:2/4;
 }
