--- a/assets/css/CVCSS.css
+++ b/assets/css/CVCSS.css
@@ -55,11 +55,18 @@ nav {
 #Formation {
     grid-column: 2;
     grid-row:3;
+    
+}
+
+#Formation>ul {
+    list-style:none;
 }
 
 #Formation>h1 {
     background-color: white;
 }
+
+
 
 #Competences {
     grid-column: 2;
@@ -90,5 +97,78 @@ nav {
 
 #cote {
     grid-column: 1;
-    grid-row:2/4;
+    grid-row:3/5;
+    margin-left:10px;
+}
+
+#photo {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.menu-burger {
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    position: relative;
+}
+
+#hamburger-logo {
+    cursor: pointer;
+    background: rgb(146, 181, 231);
+    width: 50px;
+    text-align: center;
+    padding: 10px;
+    color: black;
+    font-size: 20px;
+}
+
+.mobile-menu {
+    display: none;
+    flex-direction: column;
+    background: white;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 200px;
+    overflow: hidden;
+}
+
+.mobile-menu a {
+    color: black;
+    text-decoration: none;
+    padding: 10px;
+    transition: background 0.3s;
+}
+
+.mobile-menu a:hover {
+    background: rgb(146, 181, 231);
+}
+
+#hamburger:checked ~ .mobile-menu {
+    display: flex;
+}
+
+#hamburger {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .menu-burger {
+        display: flex;
+    }
+
+    .nav-links {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 769px) {
+    .nav-links {
+        display: flex;
+    }
+
+    .menu-burger {
+        display: none;
+    }
 }
